@@ -1,0 +1,2 @@
+"""Circular imports through direct, relative imports."""
+from . import basic2
