@@ -1,0 +1,3 @@
+from .subpkg import util
+from . import rebinding
+util = util.util
